--- a/css/style.css
+++ b/css/style.css
@@ -169,6 +169,7 @@ h1, h2, h3, h4, h5, h6, p, span, ul {
 .dark .corpHeader {
     /* dùng cho currentColor để đổi màu navbar khi scroll */
     color: var(--bg-dark-color);
+    border-bottom: none;
 }
 
 .corpHeader__wrap-navbar {
@@ -576,12 +577,172 @@ h1, h2, h3, h4, h5, h6, p, span, ul {
 
  /* Clients: Dev_Văn Dũng  */
 
-
  /* Progress: Dev_Quốc Kỳ  */
+ .corpProgress__info {
+    margin-bottom: 24px;
+}
+
+.corpProgress__info--last {
+    margin-bottom: 0;
+}
+
+.corpProgress__title {
+    font-size: 18px;
+    font-weight: 400;
+    color: var(--heading-color);
+    margin-bottom: 10px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.dark .corpProgress__title {
+    color: #eee;
+}
+
+.corpProgress__wrap {
+    height: 4px;
+    overflow: unset;
+}
+
+.dark .corpProgress__wrap {
+    background-color: #100f19;
+}
+
+.corpProgress__percent {
+    position: relative;
+    overflow: unset;
+}
+.corpProgress--gradient1 {
+    color: #61fded;
+    background-color: #0d8abc;
+    background-image: linear-gradient(-224deg, #0d8abc, #61fded);
+}
+
+.corpProgress--gradient2 {
+    color: #eece90;
+    background-color: #d45529;
+    background-image: linear-gradient(-224deg, #d45529, #eece90);
+}
+
+.corpProgress--gradient3 {
+    color: #5c51ff;
+    background-color: #f646a9;
+    background-image: linear-gradient(-224deg, #f646a9, #5c51ff);
+}
+
+.corpProgress--gradient4 {
+    color: #e5529a;
+    background-color: #e77654;
+    background-image: linear-gradient(-224deg, #e77654, #e5529a);
+}
+
+.corpProgress__percent::before {
+    content: "";
+    position: absolute;
+    width: 28px;
+    height: 28px;
+    opacity: 0.3;
+    border-radius: 50%;
+    border: 1px solid;
+    right: 0%;
+    top: 40%;
+    transform: translate(50%, -50%);
+}
+
+.corpProgress__percent::after {
+    content: "";
+    position: absolute;
+    width: 13px;
+    height: 13px;
+    border-radius: 50%;
+    border: 3px solid;
+    background-color: var(--bg-color);
+    right: 0%;
+    top: 40%;
+    transform: translate(50%, -50%);
+}
 
 
  /* Testimonials: Dev_Quốc Kỳ  */
+.corpTesti {
+    background-color: var(--bg-lightgrey);
+}
 
+.dark .corpTesti {
+    background-color: #100f19;
+}
+
+.corpTesti__item {
+    padding: 40px 30px;
+    display: block;
+    max-width: 900px;
+    margin: auto;
+    text-align: center;
+}
+
+.corpTesti__quote {
+    font-size: 18px;
+    line-height: 28px;
+    color: var(--font-color);
+    opacity: 0.8;
+}
+
+.dark .corpTesti__quote {
+    color: #eee;
+}
+
+.corpTesti__desc {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.corpTesti__img {
+    width: 70px;
+    height: 70px;
+    overflow: hidden;
+    border-radius: 50%;
+    margin-right: 20px;
+}
+
+.corpTesti__people {
+    text-align: left;
+}
+
+.corpTesti__people h2 {
+    font-size: 20px;
+    font-weight: 600;
+    line-height: 1.2;
+}
+
+.corpTesti__list .owl-dots {
+    margin-top: 30px;
+    text-align: center;
+}
+
+.corpTesti__list .owl-dots .owl-dot {
+    width: 10px;
+    height: 10px;
+    background-color: var(--secondary-color);
+    border-radius: 50%;
+    margin: 1px 6px;
+    opacity: 0.5;
+    transition: 0.3s;
+}
+
+.corpTesti__list .owl-dots .owl-dot:hover {
+    transform: scale(1.5);
+    opacity: 1;
+}
+
+.corpTesti__list .owl-dots .owl-dot.active {
+    transform: scale(1.5);
+    opacity: 1;
+}
+
+.corpTesti__list .owl-dots .owl-dot span {
+    margin: 5px 2px;
+}
 
  /* Blog: Dev_Văn Dũng  */
  .news .title {
@@ -693,6 +854,12 @@ cursor: pointer;
 
 /* Responsive */
 @media screen and (max-width:992px) {
+    .title h2 {
+        font-size: 32px;
+        line-height: 40px;
+    }
+
+    /* Responsive Header */
     .corpHeader__list {
         text-align: center;
         padding-top: 20px;
@@ -739,4 +906,28 @@ cursor: pointer;
         right: 53px;
     }
     
+}
+
+@media screen and (max-width:768px) {
+    /* Features */
+    .corpFeatures__left p {
+        margin: 14px 0 26px;
+    }
+
+    /* Testimonials */
+    .corpTesti__item {
+        padding: 20px 30px;
+    }
+}
+
+@media screen and (max-width:576px) {
+    .title h2 {
+        font-size: 30px;
+        line-height: 38px;
+    }
+
+    /* Features */
+    .corpFeatures__left p {
+        margin-bottom: 10px;
+    }
 }
